--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
 
 <body>
 
-  <simple-label></simple-label>
+  <text-box></text-box>
+  <body-box></body-box>
+  <body-box2></body-box2>
 
 
 </body>
