completato il body + responsive

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,7 @@
 
 <body>
 
-  <text-box></text-box>
-  <body-box></body-box>
-  <body-box2></body-box2>
-
+  <body-container></body-container>
 
 </body>
 
