--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,19 @@
   <script type="module" src="/build/acme-enterprise.esm.js"></script>
   <script nomodule src="/build/acme-enterprise.js"></script>
 
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-size: 100%;
+    }
+  </style> 
+
 </head>
 
 <body>
-
-  <simple-label></simple-label>
-
-
+  <acme-navbar tagline="Benvenuti su Acme" phone="800-600-200" who="chi siamo" products="prodotti" services="servizi" contacts="contatti"></acme-navbar>
 </body>
 
 </html>
