--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
 
 <body>
   <acme-navbar tagline="Benvenuti su Acme" phone="800-600-200" who="chi siamo" products="prodotti" services="servizi" contacts="contatti"></acme-navbar>
+  <body-container></body-container>
+  <acme-form></acme-form>
+  <acme-footer></acme-footer>
 </body>
 
 </html>
