--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,7 @@
 </head>
 
 <body>
-  <acme-navbar tagline="Benvenuti su Acme" phone="800-600-200" who="chi siamo" products="prodotti" services="servizi" contacts="contatti"></acme-navbar>
-  <body-container></body-container>
-  <acme-form></acme-form>
-  <acme-footer></acme-footer>
+  <app-container></app-container>
 </body>
 
 </html>
