--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" rel="stylesheet"/>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap"
+    rel="stylesheet" />
   <script type="module" src="/build/acme-enterprise.esm.js"></script>
   <script nomodule src="/build/acme-enterprise.js"></script>
 
@@ -16,19 +18,12 @@
       box-sizing: border-box;
       font-size: 100%;
     }
-  </style> 
+  </style>
 
 </head>
 
 <body>
-<<<<<<< HEAD
-
-  <body-container></body-container>
-  <acme-footer></acme-footer>
-
-=======
   <app-container></app-container>
->>>>>>> develop
 </body>
 
 </html>
